--- a/Chatting/Resources/layout/Location.xml
+++ b/Chatting/Resources/layout/Location.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
@@ -10,7 +11,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView1" />
     <TextView
-    	android:text="latitude"
+        android:text="latitude"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -18,7 +19,7 @@
         android:textSize="50sp"
         android:paddingLeft="25dp" />
     <TextView
-    	android:text="longitude"
+        android:text="longitude"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
