--- a/Chatting/Resources/layout/Message.xml
+++ b/Chatting/Resources/layout/Message.xml
@@ -112,7 +112,7 @@
             android:layout_height="match_parent"
             android:id="@+id/locationButton" />
         <Button
-            android:text="CURRENCY $"
+            android:text="$"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/currencyButton" />
@@ -121,6 +121,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/img"
+            android:maxHeight="50dp"
+            android:maxWidth="50dp"
+            android:minHeight="50dp"
+            android:minWidth="50dp" 
             />
 
     </LinearLayout>
