--- a/Chatting/Resources/layout/activity_main.xml
+++ b/Chatting/Resources/layout/activity_main.xml
@@ -1,32 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation  ="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="100dp">
+
+
+    <ImageView
+        android:src="@drawable/messenger"
+        android:layout_width="99.0dp"
+        android:layout_height="99.0dp"
+        android:id="@+id/ımageView1"
+        android:layout_marginBottom="100dp"
+        android:layout_gravity="center_horizontal"        
+         />
+   
+
+
+
+
+
 
 
     <Button
         android:text="People"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minWidth="25px"
-        android:minHeight="25px"
-        android:id="@+id/peopleButton" />
+        
+        android:id="@+id/peopleButton"
+        />
 
     <Button
         android:text="Add Person"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/addPersonButton" />
+        android:id="@+id/addPersonButton"
+        />
     <Button
         android:text="About"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/aboutButton" />
+        android:id="@+id/aboutButton"
+        android:drawableLeft="@android:drawable/ic_menu_info_details"/>
+    <TextView
+        android:text="Shake your device to add person"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/shakeText"
+        android:textColor="#ffda4343"
+        android:textAlignment="center"
+        android:layout_marginTop="40dp" />
 
-   
+
 
 
 </LinearLayout>
