--- a/Chatting/Resources/layout/activity_main.xml
+++ b/Chatting/Resources/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -17,7 +17,7 @@
         android:layout_marginBottom="100dp"
         android:layout_gravity="center_horizontal"        
          />
-   
+
 
 
 
@@ -29,8 +29,8 @@
         android:text="People"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        
         android:id="@+id/peopleButton"
+         android:drawableLeft="@android:drawable/ic_menu_call"
         />
 
     <Button
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/addPersonButton"
-        />
+        android:drawableLeft="@android:drawable/ic_menu_add"/>
     <Button
         android:text="About"
         android:layout_width="match_parent"
@@ -51,7 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/shakeText"
-        android:textColor="#ffda4343"
+        android:textColor="#ff3278c8"
         android:textAlignment="center"
         android:layout_marginTop="40dp" />
 
