--- a/Chatting/Resources/layout/About.xml
+++ b/Chatting/Resources/layout/About.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿
 <LinearLayout
     xmlns:android        ="http://schemas.android.com/apk/res/android"
     android:orientation  ="vertical"
@@ -9,25 +9,29 @@
         android:layout_width ="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text         ="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc condimentum commodo enim ut scelerisque. Vivamus nisi neque, scelerisque eu est a, rutrum lobortis justo. Duis luctus, purus nec ultricies tempus, ante tellus dapibus justo, vitae posuere dui lorem in nunc." />
+ />
 
-    <!-- This FrameLayout adds no behavior to the UI, it simply occupies all the extra space which forces the views below down to the bottom of the screen. -->
-    <FrameLayout
-        android:layout_width ="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
 
-    <TextView
-        android:layout_width      ="match_parent"
-        android:layout_height     ="wrap_content"
-        android:layout_marginLeft ="20dp"
-        android:layout_marginRight="20dp"
-        android:text              ="Built with Xamarin.Android" />
+    <ImageView
+        android:src="@drawable/github"
+        android:layout_width="107.0dp"
+        android:layout_height="151.5dp"
+        android:id="@+id/ımageView1"
+        android:layout_gravity="center"    />
+
 
     <Button
         android:id           ="@+id/learnMoreButton"
         android:layout_width ="match_parent"
         android:layout_height="wrap_content"
-        android:text         ="Learn more" />
-
+        android:text         ="Learn more" 
+       />
+    <TextView
+        android:layout_width      ="match_parent"
+        android:layout_height     ="wrap_content"
+        android:text              ="Built with Xamarin.Android"
+        android:textColor="#ff3992c6"
+        android:textAlignment="center"
+        android:layout_gravity="top"
+        android:layout_marginTop="200dp" />
 </LinearLayout>
