--- a/Chatting/Resources/layout/AddPerson.xml
+++ b/Chatting/Resources/layout/AddPerson.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?> 
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
@@ -9,26 +9,28 @@
     android:id="@+id/linearLayout1">
 
     <LinearLayout
-		android:layout_width ="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_margin="10dp">
-		<TextView
-			android:layout_width       ="wrap_content"
-			android:layout_height      ="wrap_content"
-			android:text               ="Name:"
-			android:layout_marginRight ="10dp"
-			android:layout_marginBottom="6.6dp"
-			android:layout_marginTop   ="14.6dp" />
-		<EditText
-			android:id            ="@+id/nameInput"
-			android:layout_gravity="center"
-			android:layout_width  ="200dp"
-			android:layout_height ="wrap_content" />
-	</LinearLayout>
+        android:layout_width ="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
+        <TextView
+            android:layout_width       ="wrap_content"
+            android:layout_height      ="wrap_content"
+            android:text               ="Name:"
+            android:layout_marginRight ="10dp"
+            android:layout_marginBottom="6.6dp"
+            android:layout_marginTop   ="14.6dp" />
+        <EditText
+            android:id            ="@+id/nameInput"
+            android:layout_gravity="center"
+            android:layout_width  ="200dp"
+            android:layout_height ="wrap_content"
+            android:textColor="#3692FB"/>
+    </LinearLayout>
 
 
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width       ="match_parent"
         android:layout_height      ="wrap_content"
         android:layout_marginLeft  ="10dp"
@@ -37,30 +39,47 @@
         android:minWidth="25px"
         android:minHeight="25px">
 
-		<ImageView
+        <ImageView
             android:src="@android:drawable/ic_menu_gallery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView" />
-		<Button
+            android:layout_width="354.5dp"
+            android:layout_height="298.5dp"
+            android:id="@+id/imageView"
+            />
+        <Button
             android:text="Upload Image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:minWidth="25px"
             android:minHeight="25px"
-            android:id="@+id/uploadButton" />
+            android:id="@+id/uploadButton"
+            android:textColor="#3692FB"/>
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="62.0dp"
+        android:id="@+id/linearLayout2">
+
+        <Button
+            android:layout_width ="190.0dp"
+            android:layout_height="wrap_content"
+            android:text         ="Save"
+            android:id           ="@+id/saveButton"
+            android:drawableLeft="@android:drawable/ic_menu_save"
+            />
+
+        <Button
+            android:layout_width ="190.0dp"
+            android:layout_height="wrap_content"
+            android:text         ="Cancel"
+            android:id           ="@+id/cancelButton"
+            android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
+             
+/>
     </LinearLayout>
 
-	<Button
-		android:layout_width ="match_parent"
-		android:layout_height="wrap_content"
-		android:text         ="Save"
-		android:id           ="@+id/saveButton" />
 
-	<Button
-		android:layout_width ="match_parent"
-		android:layout_height="wrap_content"
-		android:text         ="Cancel"
-		android:id           ="@+id/cancelButton" />
 
 </LinearLayout>
