--- a/Chatting/Resources/layout/People.xml
+++ b/Chatting/Resources/layout/People.xml
@@ -10,12 +10,13 @@
     android:id="@+id/linearLayout1">
 
 
+
     <ListView
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="614.0dp"
         android:id="@+id/listView" />
-
+        
 
 </LinearLayout>
