--- a/Chatting/Resources/layout/activity_main.xml
+++ b/Chatting/Resources/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/shakeText"
-        android:textColor="#ff3278c8"
+        android:textColor="#3692FB"
         android:textAlignment="center"
         android:layout_marginTop="40dp" />
 
