--- a/Chatting/Resources/layout/AddContact.xml
+++ b/Chatting/Resources/layout/AddContact.xml
@@ -5,19 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.TextInputEditText
-        android:hint=" Name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+  
+    <LinearLayout
+        android:orientation="horizontal"
         android:minWidth="25px"
         android:minHeight="25px"
-        android:id="@+id/edtName" />
-
-    <android.support.design.widget.TextInputEditText
-        android:hint=" Surname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/edtSurname" />
+        android:id="@+id/linearLayout2" >
+
+        <android.support.design.widget.TextInputEditText
+            android:hint=" Name"
+            android:layout_width="281.5dp"
+            android:layout_height="wrap_content"
+            android:minWidth="25px"
+            android:minHeight="25px"
+            android:id="@+id/edtName" />
+         <ImageView
+        android:src="@android:drawable/ic_menu_gallery"
+       android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:maxHeight="50dp"
+        android:maxWidth="50dp"
+            
+           android:src="@drawable/picture"
+            
+        android:id="@+id/contactimage" />
+    </LinearLayout>
+
+    
+
+ 
 
     <LinearLayout
         android:orientation="horizontal"
