--- a/Chatting/Resources/layout/PersonList.xml
+++ b/Chatting/Resources/layout/PersonList.xml
@@ -1,26 +1,34 @@
-﻿<LinearLayout
+﻿
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:minWidth="25px"
     android:minHeight="25px"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
    >
-
-     <TextView
+    <ImageView
+        android:src="@android:drawable/ic_menu_gallery"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:maxHeight="50dp"
+        android:maxWidth="50dp"
+        android:id="@+id/personimage" />
+    <TextView
         android:text="Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minWidth="25px"
         android:minHeight="25px"
-        android:id="@+id/textName" />
-    <TextView
-        android:text="Surname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textSurname" />
-
+        android:id="@+id/textName"
+        android:textColor="#ffd50000"
+        android:textSize="30dp"
+        android:typeface="serif" />
    
-        
+
+
+
+
+
 
 </LinearLayout>
